# DLCv3-WebUI-Pytorch

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Home.py  README.md  __init__.py  deeplabcut v3 install win10.txt  environment.DLCv3-WebUI.lock.yml  environment.yml  log.txt  nohup.out  pyproject.toml  requirements.txt  trajectories_summary.csv
.github/workflows/: ci.yml
docs/: README.md
docs/guides/: installation.md
logs/: usage.txt
pages/: 1_Mouse_Scratch.py  2_Mouse_Grooming.py  3_Mouse_Swimming.py  4_Three_Chamber.py  5_Two_Social.py  6_Mouse_CPP.py  7_Video_Preparation.py  8_Video_Crop.py  9_Mouse_Catch.py
src/: __init__.py
src/core/: __init__.py
src/core/config/: __init__.py  config.yaml  config_manager.py
src/core/gpu/: gpu_selector.py  gpu_utils.py
src/core/helpers/: analysis_helper.py  download_utils.py  file_sorting.py  gpu_utilization.py  list_directories.py  video_combiner.py  video_helper.py
src/core/logging/: __init__.py  log_manager.py
src/core/processing/: __init__.py  mouse_catch_video_processing.py  mouse_cpp_video_processing.py  mouse_grooming_video_processing.py  mouse_scratch_video_processing.py  mouse_social_video_processing.py  mouse_swimming_video_processing.py  social_behavior_analysis.py  three_chamber_video_processing.py  trajectory_processing.py
src/core/utils/: __init__.py  execute_selected_scripts.py  file_utils.py  gpu_selector.py  gpu_utils.py
src/ui/pages/: 6_mouse_cpp.py  (+14 more)
src/utils/: file_utils.py
tests/unit/: test_config_manager.py  test_file_utils_upload_security.py  test_gpu_utils.py  test_video_helper_ffmpeg.py
(+4 files in other folders)
